--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@reduxjs/toolkit": "^2.9.0",
+    "axios": "^1.12.1",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "lucide-react": "^0.543.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
