mobile header adaptive

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-redux": "^9.2.0",
+    "sass": "^1.92.1",
+    "scss": "^0.2.4",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
