--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.2.0",
     "sass": "^1.92.1",
     "scss": "^0.2.4",
+    "swiper": "^12.0.2",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
